[package]
name = "owl"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"

[dependencies]
bytemuck = { version = "*", default-features = false, optional = true }
num-traits = { version = "*", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [ "num-traits/std" ]
simd = [ "bytemuck/nightly_portable_simd" ]
